<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInteraction" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            android:padding="2dp"
            android:text="@string/section_dial_num"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/green" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_dial_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/edit_dial_num"
                android:inputType="phone" />

            <Button
                android:id="@+id/button_dial_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="dialNumber"
                android:text="@string/button_dial" />
        </LinearLayout>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_red"
            android:padding="2dp"
            android:text="@string/section_send_email"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/red" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/edit_email_address"
                android:inputType="textEmailAddress" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="composeEmail"
                android:text="@string/button_go" />
        </LinearLayout>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:padding="2dp"
            android:text="@string/section_browse_web"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/blue" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_web_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/edit_web_address"
                android:inputType="textUri" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="openWebpage"
                android:text="@string/button_go" />
        </LinearLayout>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:padding="2dp"
            android:text="@string/section_find_loc"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/purple" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_loc_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/edit_location"
                android:inputType="textAutoCorrect" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="findLocation"
                android:text="@string/button_search" />
        </LinearLayout>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_yellow"
            android:padding="2dp"
            android:text="@string/section_share_app"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/yellow" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="shareApp"
                android:text="@string/button_share" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>