<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".CameraDemo" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/light_purple"
            android:gravity="center_vertical"
            android:onClick="takePhoto"
            android:padding="5dp"
            android:text="@string/button_take_photo"
            android:textColor="@color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple"
            android:onClick="takePhoto"
            android:padding="5dp"
            android:text="@string/button_go"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/light_red"
            android:gravity="center_vertical"
            android:onClick="takeVideo"
            android:padding="5dp"
            android:text="@string/button_take_video"
            android:textColor="@color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:onClick="takeVideo"
            android:padding="5dp"
            android:text="@string/button_go"
            android:textColor="@color/white" />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="60dp" />

</LinearLayout>